2020-07-13  7.0.10-24  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-24 GIT revision 17461:d27a50dab:20200713

2020-07-05  7.0.10-24  <quetzlzacatenango@image...>
  * Add support for the -white-balance command-line option.
  * Discover hidden files when globbing (e.g. *.jpg) (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2239).
  * New inverse-log evaluate operator.

2020-07-04  7.0.10-23  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-23 GIT revision 17437:894231bc3:20200704 

2020-06-28  7.0.10-23  <quetzlzacatenango@image...>
  * Ensure that float is valid in ClampToQuantum() (reference
    https://github.com/ImageMagick/ImageMagick/pull/2219).
  * New pseudo-image format, ashlar, e.g.
    convert *.jpg -resize 320x320 ashlar:canvas.png).

2020-06-27  7.0.10-22  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-22 GIT revision 17415:5318a3e0a:20200627

2020-06-24  7.0.10-22  <quetzlzacatenango@image...>
  * Fix wrapping of caption (reference
    https://github.com/ImageMagick/ImageMagick/issues/2178).
  * Sanity check of affine matrix when drawing.

2020-06-22  7.0.10-21  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-21 GIT revision 17395:af81c28c9:20200622

2020-06-21  7.0.10-21  <quetzlzacatenango@image...>
  * New image property, %N, only report the # of frames in an image sequence,
    just once rather than on a per frame basis
  * Problems converting CMYK to RGB regression (reference
    https://github.com/ImageMagick/ImageMagick6/issues/83)

2020-06-21  7.0.10-21 Dirk Lemstra <dirk@lem.....org>
  * Added support for 32 bit zip with prediction format to the PSD decoder
    (reference https://github.com/ImageMagick/ImageMagick/issues/455).

2020-06-20  7.0.10-20  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-20 GIT revision 17372:d91c43f3b:20200620

2020-06-14  7.0.10-20  <quetzlzacatenango@image...>