@@ -1,6 +1,10 @@
 2020-07-13  7.0.10-24  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.10-24 GIT revision 17461:d27a50dab:20200713
 
+2020-07-18  7.0.10-24 Dirk Lemstra <dirk@lem.....org>
+  * To preserve compression of input image with the tiff encoder use:
+    -define tiff:preserve-compression=true.
+
 2020-07-05  7.0.10-24  <quetzlzacatenango@image...>
   * Add support for the -white-balance command-line option.
   * Discover hidden files when globbing (e.g. *.jpg) (reference
